--- a/dot_config/Brewfile.tmpl
+++ b/dot_config/Brewfile.tmpl
@@ -1,8 +1,12 @@
+{{ if eq .chezmoi.os "darwin" }}
+
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "koekeishiya/formulae"
+
+{{ end }}
 
 brew "bat"
 brew "eza"
