正直remote containerにdenoとzeno入れるのは諦め

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,7 +1,9 @@
+{{ if eq .chezmoi.os "darwin" }}
+eval "$(/opt/homebrew/bin/brew shellenv)"
+{{ end }}
 eval "$(sheldon source)"
 eval "$(starship init zsh)"
 {{ if eq .chezmoi.os "darwin" }}
-eval "$(/opt/homebrew/bin/brew shellenv)"
 eval "$(rtx activate zsh)"
 
 # Added by OrbStack: command-line tools and integration
@@ -10,8 +12,10 @@ source ~/.orbstack/shell/init.zsh 2>/dev/null || :
 
 export XDG_CONFIG_HOME="$HOME/.config"
 
+{{ if eq .chezmoi.os "darwin" }}
 bindkey -d
 bindkey ' ' zeno-auto-snippet
 bindkey '^x' zeno-insert-snippet
 bindkey '^r' zeno-history-selection
 bindkey '^i' zeno-completion
+{{ end }}
